add test sandbox
add dev env for deploy

fix deploy stage

create infrastructure with aurora postgres, api, lambda

refresh lambda on terraform deploy to use latest image

add bastion server

update lambda to read credentials from secrets manager

refresh database connection everytime as auth token is short lived

make rds private

create db user to use with iam authentication

create bastion host and update migrations env

introduce new env test

add aurora dsql

create database migration

----------------

--- a/docs/scripts/sandbox.ipynb
+++ b/docs/scripts/sandbox.ipynb
@@ -75,10 +75,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "claude-sonnet",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Claude 3 Sonnet text response: There is no single agreed upon answer to the meaning of life, as it is a deep philosophical question that people have grappled with for centuries. Some of the major perspectives on it include:\n",
+      "\n",
+      "- Religious/spiritual views that propose life's meaning comes from a higher power or divine purpose.\n",
+      "\n",
+      "- Existentialist perspectives that we have to create our own subjective meaning to life.\n",
+      "\n",
+      "- Humanist views that meaning arises from human relationships, pursuits and making the world better.\n",
+      "\n",
+      "- Nihilist views that life has no inherent meaning.\n",
+      "\n",
+      "- Scientific views that life's meaning lies in our evolutionary purpose of reproducing and perpetuating the species.\n",
+      "\n",
+      "Ultimately, the meaning of life is something each individual has to grapple with and decide what makes sense to them based on their beliefs, experiences and principles. There is no objectively provable answer that applies universally. The search for life's meaning is one of the deepest driving forces and great questions for humanity.\n",
+      "Claude 3 Sonnet streaming response:\n",
+      "Quantum computing is a revolutionary way of processing information that harnesses the principles of quantum mechanics, which govern the behavior of particles at the atomic and subatomic levels. Unlike classical computers, which process information using bits represented as 0s and 1s, quantum computers use quantum bits, or qubits, which can exist in a superposition of both 0 and 1 simultaneously.\n",
+      "\n",
+      "Here's a simplified explanation of quantum computing:\n",
+      "\n",
+      "1. Qubits: The fundamental unit of information in quantum computing is the qubit. Unlike classical bits, which can only represent either 0 or 1, qubits can exist in a superposition of both states at the same time. This means that a single qubit can represent both 0 and 1 simultaneously, allowing for parallel computation.\n",
+      "\n",
+      "2. Superposition: Superposition is a fundamental principle of quantum mechanics, which allows particles to exist in multiple states simultaneously. In the context of quantum computing, this means that qubits can represent a combination of 0 and 1 at the same time, enabling them to perform multiple calculations simultaneously.\n",
+      "\n",
+      "3. Entanglement: Entanglement is another key concept in quantum computing. It describes the phenomenon where two or more quantum particles become inextricably linked, even when separated by a vast distance. If you observe or manipulate one particle, the others will be instantly affected, regardless of the distance between them. This property is crucial for quantum communication and certain quantum computing algorithms.\n",
+      "\n",
+      "4. Quantum Parallelism: Due to superposition and entanglement, quantum computers can perform certain calculations exponentially faster than classical computers. While a classical computer processes information sequentially, a quantum computer can explore multiple possibilities simultaneously, allowing it to solve certain types of problems much more efficiently.\n",
+      "\n",
+      "5. Applications: Quantum computing has the potential to revolutionize various fields, including cryptography, optimization problems, simulations of complex systems (e.g., molecular structures), machine learning, and more. However, building large-scale, practical quantum computers is still a significant challenge, and research is ongoing to overcome technical hurdles.\n",
+      "\n",
+      "It's important to note that quantum computing is still an emerging field, and while it holds tremendous promise, there are also significant challenges and limitations. Classical computers will likely continue to be used for most general-purpose computing tasks, while quantum computers may excel at specific types of problems that can take advantage of their unique capabilities.\n"
+     ]
+    }
+   ],
    "source": [
     "class ClaudeSonnetChatbot(BaseChatbot):\n",
     "    def __init__(self, temperature: float = 0):\n",
@@ -112,11 +148,122 @@
     "    print(chunk, end=\"\")\n",
     "print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5748a0fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# db_connect.py\n",
+    "\n",
+    "import logging\n",
+    "import boto3\n",
+    "\n",
+    "from sqlalchemy import create_engine, event\n",
+    "from sqlalchemy.engine.url import URL\n",
+    "from sqlalchemy.orm import sessionmaker, scoped_session\n",
+    "\n",
+    "# ─── Logging ───────────────────────────────────────────────────────────────────\n",
+    "logging.basicConfig()\n",
+    "logging.getLogger(\"sqlalchemy\").setLevel(logging.ERROR)\n",
+    "\n",
+    "# ─── Environment ────────────────────────────────────────────────────────────────\n",
+    "AWS_REGION = os.getenv(\"AWS_REGION\", \"us-east-1\")\n",
+    "DSQL_ENDPOINT = os.environ.get(\"DSQL_ENDPOINT\")\n",
+    "POSTGRES_USER = os.environ[\"POSTGRES_USER\"]  # e.g. \"admin\" or custom IAM role\n",
+    "POSTGRES_DB = os.environ[\"POSTGRES_DB\"]\n",
+    "POSTGRES_PW = os.getenv(\"POSTGRES_PASSWORD\", \"\")  # for local\n",
+    "STAGE = os.getenv(\"STAGE\", \"local\").lower()  # \"local\" | \"dev\" | \"prod\"\n",
+    "# ────────────────────────────────────────────────────────────────────────────────\n",
+    "\n",
+    "\n",
+    "def _make_base_url() -> str:\n",
+    "    if STAGE == \"local\":\n",
+    "        url = URL.create(\n",
+    "            \"postgresql+psycopg2\",\n",
+    "            username=POSTGRES_USER,\n",
+    "            password=POSTGRES_PW,\n",
+    "            host=\"localhost\",\n",
+    "            port=5432,\n",
+    "            database=POSTGRES_DB,\n",
+    "        )\n",
+    "    else:\n",
+    "        url = URL.create(\n",
+    "            \"postgresql+psycopg2\",\n",
+    "            username=POSTGRES_USER,\n",
+    "            password=\"\",\n",
+    "            host=DSQL_ENDPOINT,\n",
+    "            port=5432,\n",
+    "            database=POSTGRES_DB,\n",
+    "        )\n",
+    "    return url.render_as_string(hide_password=False)\n",
+    "\n",
+    "\n",
+    "def _make_connect_args() -> dict:\n",
+    "    if STAGE == \"local\":\n",
+    "        return {\"sslmode\": \"disable\"}\n",
+    "    else:\n",
+    "        dsql = boto3.client(\"dsql\", region_name=AWS_REGION)\n",
+    "        # If you're connecting as the built-in \"admin\":\n",
+    "        token = dsql.generate_db_connect_admin_auth_token(\n",
+    "            Hostname=DSQL_ENDPOINT,\n",
+    "            Region=AWS_REGION,\n",
+    "        )\n",
+    "        # For custom role instead of \"admin\", use:\n",
+    "        # token = dsql.generate_db_connect_auth_token(\n",
+    "        #     Hostname=DSQL_ENDPOINT,\n",
+    "        #     DBUser=POSTGRES_USER,\n",
+    "        #     Region=AWS_REGION,\n",
+    "        # )\n",
+    "        return {\"password\": token, \"sslmode\": \"require\"}\n",
+    "\n",
+    "\n",
+    "# ─── Engine & Session ────────────────────────────────────────────────────────────\n",
+    "_engine = create_engine(\n",
+    "    _make_base_url(),\n",
+    "    connect_args=_make_connect_args(),\n",
+    "    pool_pre_ping=True,\n",
+    "    future=True,\n",
+    ")\n",
+    "\n",
+    "if STAGE == \"dev\":\n",
+    "\n",
+    "    @event.listens_for(_engine, \"do_connect\")\n",
+    "    def _inject_fresh_token(dialect, conn_rec, cargs, cparams):\n",
+    "        dsql = boto3.client(\"dsql\", region_name=AWS_REGION)\n",
+    "        fresh = dsql.generate_db_connect_admin_auth_token(\n",
+    "            Hostname=DSQL_ENDPOINT,\n",
+    "            Region=AWS_REGION,\n",
+    "        )\n",
+    "        cparams[\"password\"] = fresh\n",
+    "        return dialect.connect(*cargs, **cparams)\n",
+    "\n",
+    "\n",
+    "SessionLocal = scoped_session(\n",
+    "    sessionmaker(\n",
+    "        bind=_engine,\n",
+    "        autoflush=False,\n",
+    "        autocommit=False,\n",
+    "        expire_on_commit=False,\n",
+    "        future=True,\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01d16d4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "innomightlabs-api",
    "language": "python",
    "name": "python3"
   },
